images, fixes and advanced tasks

--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -18,11 +18,11 @@
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde vel obcaecati numquam quas facilis corporis, doloribus commodi debitis sapiente dicta maiores distinctio harum atque magni tempora rem totam suscipit voluptate.</h4>
+                <h4>California, Arizona, ...</h4>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam accusantium aperiam suscipit nihil, iusto consequuntur esse repellendus! Illum, amet facilis molestias est illo ducimus exercitationem a perferendis vel, perspiciatis libero!</h4>
+                <h4>Internet, Kitchenn, ...</h4>
             </div>
             <button>Search</button>
         </section>
