--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,67 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirBnB Clone</title>
-    <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/4-common.css">
-    <link rel="stylesheet" href="./styles/3-header.css">
-    <link rel="stylesheet" href="./styles/3-footer.css">
-    <link rel="stylesheet" href="./styles/6-filters.css">
-    <link rel="stylesheet" href="./styles/7-places.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>AirBnB Clone</title>
+	<link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
+	<link rel="stylesheet" href="./styles/4-common.css">
+	<link rel="stylesheet" href="./styles/3-header.css">
+	<link rel="stylesheet" href="./styles/3-footer.css">
+	<link rel="stylesheet" href="./styles/6-filters.css">
+	<link rel="stylesheet" href="./styles/7-places.css">
 </head>
+
 <body>
-    <header>
-        <div class="logo"></div>
-    </header>
-    <div class="container">
-        <section class="filters">
-            <div class="locations">
-                <h3>States</h3>
-                <h4>California, Arizona, ...</h4>
-                <ul class="popover">
-                    <li>
-                        <h2>Arizona</h2>
-                        <ul class="cities">
-                            <li>Page0</li>
-                            <li>Page1</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <h2>California</h2>
-                        <ul class="cities">
-                            <li>San Francisco</li>
-                            <li>Los Santos</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="amenities">
-                <h3>Amenities</h3>
-                <h4>Internet, Kitchenn, ...</h4>
-                <ul class="popover">
-                    <li>Internet</li>
-                    <li>TV</li>
-                    <li>Kitchen</li>
-                    <li>Iron</li>
-                </ul>
-            </div>
-            <button>Search</button>
-        </section>
-        <section class="places">
-            <h1>Places</h1>
-            <article>
-                <h2>Place A</h2>
-            </article>
-            <article>
-                <h2>Place B</h2>
-            </article>
-            <article>
-                <h2>Place C</h2>
-            </article>
-        </section>
-    </div>
-    <footer>Best School</footer>
+	<header>
+		<div class="logo"></div>
+	</header>
+	<div class="container">
+		<section class="filters">
+			<div class="locations">
+				<h3>States</h3>
+				<h4>California, Arizona, ...</h4>
+				<ul class="popover">
+					<li>
+						<h2>Arizona</h2>
+						<ul class="cities">
+							<li>Page0</li>
+							<li>Page1</li>
+						</ul>
+					</li>
+					<li>
+						<h2>California</h2>
+						<ul class="cities">
+							<li>San Francisco</li>
+							<li>Los Santos</li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+			<div class="amenities">
+				<h3>Amenities</h3>
+				<h4>Internet, Kitchenn, ...</h4>
+				<ul class="popover">
+					<li>Internet</li>
+					<li>TV</li>
+					<li>Kitchen</li>
+					<li>Iron</li>
+				</ul>
+			</div>
+			<button>Search</button>
+		</section>
+		<section class="places">
+			<h1>Places</h1>
+			<div class="articles">
+				<article>
+					<h2>Place A</h2>
+				</article>
+				<article>
+					<h2>Place B</h2>
+				</article>
+				<article>
+					<h2>Place C</h2>
+				</article>
+			</div>
+		</section>
+	</div>
+	<footer>Best School</footer>
 </body>
+
 </html>
